--- a/dream_provider/task/templates/search_list.html
+++ b/dream_provider/task/templates/search_list.html
@@ -1,44 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
+      crossorigin="anonymous"
+    />
     <title>TASK</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar bg-light">
-        <div class="container-fluid">
-          <form class="d-flex" role="search"  method="GET" value="{{request.GET.q}}">
-            <input class="form-control me-2" type="search" name="q" value="{{request.GET.q}}" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit" name="submit" value="Search">Search</button>
-          </form>
-          <form class="container-fluid" action="" method="POST" value = "{{request.POST.random}}">
-            <button class="btn btn-outline-success" name="random" value="random">+</button>
-            {% csrf_token %}
-          </form>
-        </div>
-      </nav>
-      <ul>
-        {% if submitbutton == 'Search' and request.GET.q != '' %}
-
-            {% for item in items %}
-                <li>
-                    {{ item.item }}
-                </li>
-            {% endfor %}
-
-        {%else%}
-        
-        {% endif %}
-        {% if addlistbutton == 'random' %}
-        working
-          
-        {% endif %}
-      </ul>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-
-</body>
+      <div class="container-fluid">
+        <form
+          class="d-flex"
+          role="search"
+          method="GET"
+          value="{{request.GET.q}}"
+        >
+          <input
+            class="form-control me-2"
+            type="search"
+            name="q"
+            value="{{request.GET.q}}"
+            placeholder="Search"
+            aria-label="Search"
+          />
+          <button
+            class="btn btn-outline-success"
+            type="submit"
+            name="submit"
+            value="Search"
+          >
+            Search
+          </button>
+        </form>
+        <form class="container-fluid" action="" method="POST">
+          <button class="btn btn-outline-success" name="random" value="random">
+            <a href="{% url 'ran' %}">+</a>
+          </button>
+          {% csrf_token %}
+        </form>
+      </div>
+    </nav>
+    <ul>
+      {% if submitbutton == 'Search' and request.GET.q != '' %} {% for item in
+      items %}
+      <li>{{ item.item }}</li>
+      {% endfor %} {%else%} {% endif %} {% if addlistbutton == 'random' %}
+      working {% endif %}
+    </ul>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
